# architectura

./: .gitignore  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  analyze_data_scopes_imputations_cubicspline.html  analyze_data_scopes_imputations_ln.html  analyze_scope_correlations.html  analyze_temporal_features.html  bash.exe.stackdump  cli.py  deps.txt  excerpt.csv  experiment_estimators.py  experiment_voting_regression_vs_single_regression.py  feature_selection.py  filled.csv  log_run.txt  main.py  main_experiment_feature_selection.py  main_inference_pipeline.py  main_mma_analysis.py  main_prod copy.py  main_prod.py  main_prod_gdc.py  main_qual.py  main_save_search_db.py  main_test.py  main_test_datasources.py  main_test_estimators.py  main_test_estimators_parallel.py  main_test_estimators_sequential.py  merg.py  non-filled.csv  optuna_study_example.db  optuna_study_example.py  package-lock.json  paypal.csv  playground.py  (+8 more)
base/: __init__.py  common.py  confidence_intervall_estimator.py  constants.py  dataset_loader.py  estimator.py  helper.py  imputer.py  mappings.py  metrics.py  oxari_types.py  pipeline.py  postprocessor.py  preprocessor.py  run_utils.py  saver.py  types.py
cli/: cli.py  license.txt
dataset_loader/: __init__.py  auto_loader.py  core.py  csv_loader.py
datasources/: __init__.py  core.py  digital_ocean.py  loaders.py  local.py  mock.py  online.py
datastores/: __init__.py  saver.py
development/: run_saver.py
experiments/: __init__.py  experiment_AAA.py  experiment_AAA_MMA.py  experiment_MMA_n_trials_n_startup_trials.py  experiment_PCA.py  experiment_SMA_vs_MMA.py  experiment_argument_parser.py  experiment_bucket_classifier.py  experiment_bucket_classifier_performance.py  experiment_bucket_error.py  experiment_bucket_optimum.py  experiment_bucket_optimum_continue.py  experiment_classifier_performance.py  experiment_confidence_estimator_performance.py  experiment_estimators 2.py  experiment_estimators.py  experiment_estimators_gradient_boost.py  experiment_estimators_svm.py  experiment_exchange_deduplication.py  experiment_explainers.py  experiment_feature_impact.py  experiment_feature_reduction 2.py  experiment_feature_reduction.py  experiment_feature_scaling.py  experiment_feature_scaling_validation.py  experiment_feature_vif_importances.py  experiment_linktransformer.py  experiment_missing_value_imputers.py  experiment_missing_value_imputers_buckets.py  experiment_missing_value_imputers_downstream_task.py  experiment_missing_value_imputers_downstream_task_validation.py  experiment_missing_value_imputers_downstream_task_validation_2.py  experiment_missing_value_imputers_equilibrium.py  experiment_missing_value_imputers_kcluster.py  experiment_missing_value_imputers_lightgbm.py  experiment_missing_year_imputers.py  experiment_model_leap_forward_1.py  experiment_multi_bucketing_vs_single_bucketing.py  experiment_optuna_metric.py  experiment_preprocessors.py  (+11 more)
feature_reducers/: baseline.py  core.py  visualisation_only.py
feature_selectors/: baseline.py
imputers/: __init__.py  autoimpute.py  baseline.py  bucket.py  categorical.py  core.py  equilibrium_method.py  interpolation.py  iterative.py  kcluster_bucket.py  numerical.py  other_bucket.py  revenue_bucket.py  scope_bucket.py
lar_calculator/: lar_model.py  model_lar.py
local/: example_class_relationships.py
not-needed-anymore/: experiment.csv  main_qual.py  main_test copy.py  main_test.py  main_test_datasources.py  main_test_estimators_parallel.py  main_test_estimators_sequential.py  playground.py
notebooks/: analyze_AAA.py  analyze_MMA_n_trials_n_startuptrials.py  analyze_SMA_vs_MMA.py  analyze_VIF_model_comparison.py  analyze_bucket_classifiers.py  analyze_bucket_error.py  analyze_bucket_optimum.py  analyze_causality.py  analyze_classifier_performance.py  analyze_confidence_intervalls.py  analyze_data_features.py  analyze_data_scopes.py  analyze_data_scopes_imputations.py  analyze_dataset.py  analyze_estimators.py  analyze_estimators_gradient_boost.py  analyze_estimators_svm.py  analyze_feature_distributions.py  analyze_feature_impact.py  analyze_feature_impact_between_models.py  analyze_feature_missingness.py  analyze_feature_scaling.py  analyze_feature_selection.py  analyze_feature_set_initial_discovery.py  analyze_feature_vif_importances.py  analyze_feature_vif_performances.py  analyze_gamma.py  analyze_linktransformer.py  analyze_missing_value_imputers.py  analyze_missing_value_imputers_buckets.py  analyze_missing_value_imputers_downstream_task.py  analyze_model.py  (+22 more)
(+260 files in other folders)
