[tool.poetry]
name = "architectura"
version = "0.1.0"
description = "Contains all the code to train, evaluate and analyse scope prediction models and more."
authors = ["Olusanmi Hundogan <o.hundogan@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.2.0"
numpy = "^1.23.0"
pandas = "^1.5.2"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
pmdarima = "^2.0.2"
optuna = "^3.0.5"
tqdm = "^4.64.1"
cloudpickle = "^2.2.0"
scipy = "^1.8.1"
xgboost = "^1.7.2"
lightgbm = "^3.3.3"
statsmodels = "^0.13.5"
notebook = "^6.5.2"
shap = "^0.41.0"
joblib = "^1.2.0"
category-encoders = "^2.5.1.post0"
numba = "^0.56.4"
py-cpuinfo = "^9.0.0"
kmedoids = "^0.4.1"
tbb = "^2021.8.0"
tbb4py = "^2021.8.0"
daal = "^2023.0.0"
daal4py = "^2023.0.0"
intel-openmp = "^2023.0.0"
impi-rt = "^2021.8.0"
mkl = "^2023.0.0"
ipp = "^2021.7.0"
intel-opencl-rt = "^2023.0.0"
dpcpp-cpp-rt = "^2023.0.0"
onednn-cpu-dpcpp-gpu-dpcpp = "^2023.0.0"
impi-devel = "^2021.8.0"
oneccl-devel = "^2021.8.0"
neural-compressor = "^1.14.2"
intel-tensorflow = "^2.11.0"
intel-tensorflow-avx512 = "^2.11.0"
ipp-static = "^2021.7.0"
ipp-include = "^2021.7.0"
ipp-crypto = "^2021.6.3"
ipp-crypto-static = "^2021.6.3"
ipp-crypto-include = "^2021.6.3"
tbb-devel = "^2021.8.0"
scikit-learn-intelex = "^2023.0.0"
intel-fortran-rt = "^2023.0.0"
daal-static = "^2023.0.0"
daal-devel = "^2023.0.0"
daal-include = "^2023.0.0"
mkl-devel = "^2023.0.0"
mkl-static = "^2023.0.0"
mkl-include = "^2023.0.0"
onednn-devel-cpu-dpcpp-gpu-dpcpp = "^2023.0.0"
python-dotenv = "^0.21.0"
boto3 = "^1.26.37"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
yapf = "^0.32.0"
isort = "^5.11.4"
pipreqs = "^0.4.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

