[tool.poetry]
name = "architectura"
version = "0.1.0"
description = "Contains all the code to train, evaluate and analyse scope prediction models and more."
authors = ["Olusanmi Hundogan <o.hundogan@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.2.0"
numpy = "^1.23.0"
pandas = "^1.5.2"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
pmdarima = "^2.0.2"
optuna = "^3.0.5"
tqdm = "^4.64.1"
cloudpickle = "^2.2.0"
scipy = "^1.8.1"
xgboost = "^1.7.2"
lightgbm = "^3.3.3"
statsmodels = "^0.13.5"
notebook = "^6.5.2"
shap = "^0.41.0"
joblib = "^1.2.0"
category-encoders = "^2.5.1.post0"
numba = "^0.56.4"
py-cpuinfo = "^9.0.0"
kmedoids = "^0.4.1"
python-dotenv = "^0.21.0"
boto3 = "^1.26.37"
typing-extensions = "^4.4.0"
mapie = "^0.5.0"
python-fire = "^0.1.0"
typer = {extras = ["all"], version = "^0.7.0"}
pyfiglet = "^0.8.post1"
loguru = "^0.6.0"
jsonlines = "^3.1.0"
yapf = "^0.32.0"
openpyxl = "^3.1.0"
cdt = "^0.6.0"
autoimpute = "^0.13.0"
missingno = "^0.5.1"
textdistance = "^4.5.0"
pydot = "^1.4.2"
boto3-stubs = {extras = ["essential"], version = "^1.26.80"}
pymongo = "^4.3.3"
colorlog = "^6.7.0"
pytest = "^7.2.2"
country-converter = "^1.0.0"
jupyter = "^1.0.0"
alibi = "^0.9.4"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
yapf = "^0.32.0"
isort = "^5.11.4"
pipreqs = "^0.4.11"
autoflake = "^2.0.1"
unimport = "^0.13.0"

[tool.poetry.extras]
gpu = ["torch", "pgmpy"]
visuals = ["pygraphviz"]

[tool.pytest.ini_options]
testpaths = ["./tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

